--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.0",
     "react-scroll": "^1.9.0",
-    "web-vitals": "^3.5.1"
+    "web-vitals": "^3.5.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/lab": "^6.0.0-beta.22",
+    "@mui/material": "^6.3.1",
+    "framer-motion": "^11.17.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
